syntax = "proto3";

option csharp_namespace = "HomeAnalytica.Grpc.Contracts.Protos";

package sensor;

import "google/protobuf/timestamp.proto";

enum SensorType {
    SENSOR_TYPE_UNSPECIFIED = 0;
    TEMPERATURE = 1;
    HUMIDITY = 2;
    ENERGY_CONSUMPTION = 3;
}

// The sensor data service definition.
service SensorDataSender {
  // Sends sensor data
  rpc SubmitSensorData (SensorDataRequest) returns (SensorDataResponse);
}

// The request message containing sensor data.
message SensorDataRequest {
    string device_id = 1;
    google.protobuf.Timestamp timestamp = 2;
    SensorType sensor_type = 3;
    double value = 4;
}

// The response message confirming receipt of the data.
message SensorDataResponse {
    string message = 1;
}
